samples/_failures_safe/1761452659_8a31e3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01bf6314.c: In function ‘main’:
./samples/SAFE/__tmp_01bf6314.c:184:9: error: expected expression at end of input
  184 |         if (token.type == TOKEN_ERROR)
      |         ^~
./samples/SAFE/__tmp_01bf6314.c:184:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_01bf6314.c:184:9: error: expected declaration or statement at end of input
